--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.pytest_cache/
 __pycache__/
 *.pyc
 .ipynb_checkpoints/
@@ -5,3 +6,4 @@ __pycache__/
 # build artifacts
 build/
 src/optproj/_cext.*
+.venv/
